# task79_simulation

./: README.md  frames_2024-03-25_20.23.10.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/scripts/: cartographer_publish.py  dummy.py  frames_2024-04-29_14.34.12.gv  hector_listener.py  hector_publish.py  odom2pose.py  orb_rec.py  plotter.py  rosbag_from_file.sh  run_rtab.sh  save_poses.py  shell_launch.py  static_tf.yaml  tf_receive.py  topics.txt
src/task79_data_converter/: .gitignore  LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/task79_data_converter/config/: startup_dataset_config.yaml  startup_module_config.yaml  startup_sensor_config.yaml
src/task79_data_converter/data/: mission_data_management.md
src/task79_data_converter/data/mission_data/: mission_data_management.md
src/task79_data_converter/launch/: task79_data_converter_launch.xml
src/task79_data_converter/log/: log_management.md
src/task79_data_converter/task79_data_converter/: configuration_manager_node.py  formatted_data_conversion_node.py
src/task79_data_converter/tools/: tools_management.md
src/task79_data_converter/tools/data_analysis/: performance_degradation_analysis_plot.py  plot_analysis.py
src/task79_data_converter/tools/data_processing/: process_syrinx_raw_data.py
src/task79_data_converter/tools/file_management/: load_data_from_file.py
src/task79_data_converter/tools/format_management/: dict_format_converter.py
src/task79_data_converter/tools/math_support/: mean.py  range_min_max.py  rot_matrix.py  standard_deviation.py
src/task79_data_converter/tools/ros2_management/: ros2_extended_functionality_helper.py
src/task79_data_converter/tools/unit_conversion/: unit_converter.py
src/task79_interfaces/: CMakeLists.txt  package.xml
src/uav_gazebo/: CMakeLists.txt  package.xml  settings.json
src/uav_gazebo/launch/: uav_world.launch.py
src/uav_gazebo/models/iris_sensors/: model.config  model.sdf
src/uav_gazebo/scripts/: quadcopter_ui.py
src/uav_gazebo/scripts/plot_data/04_15_15_35_13/: tracked_pose.csv
src/uav_gazebo/worlds/: uav_maze.world  uav_runway.world
(+93 files in other folders)
