<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_gazebo</name>
  <version>0.0.0</version>
  <description>Packages and launch files for Gazebo UAV simulation</description>
  <maintainer email="emmanuelombo95@gmail.com">Orion</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <!-- <exec_depend>rospy</exec_depend> -->
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <exec_depend>ros2launch</exec_depend>
  <!-- <exec_depend>json</exec_depend> -->
  <!-- <exec_depend>nav2</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
